@@ -41,7 +41,7 @@ jsp.out=test/jsp
 app=jabsorb
 
 # The tag / version given to this build
-version=1.1
+version=1.1.1
 
 # The name of the project
 app-prefix=${app}-${version}
