@@ -1,6 +1,6 @@
 <%!
   String appName = "jabsorb";
-  String version = "1.1";
+  String version = "1.1.1";
 %>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
