@@ -1,5 +1,11 @@
 CHANGES log
 
+2007-09-25 jabsorb 1.1.1 release
+
+* minor fix to jsonrpc.js:
+  fix small type coercion bug (that had major consequences) in jsonrpc.js
+  and added 3 new unit tests to test for the bug
+
 2007-09-20 jabsorb 1.1 release
 
 new features:
